--- a/packages/elixir/elixir.nuspec
+++ b/packages/elixir/elixir.nuspec
@@ -1,30 +1,36 @@
-<?xml version="1.0"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
+<?xml version="1.0" encoding="utf-8"?>
+<package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>elixir</id>
-    <version>1.2.4</version>
+    <version>1.2.5</version>
+    <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages</packageSourceUrl>
+    <owners>Bruno Baldochi</owners>
     <title>Elixir</title>
-    <authors>Jose Valim</authors>
-    <owners>Onorio Catenacci</owners>
-    <licenseUrl>https://github.com/elixir-lang/elixir/blob/master/LICENSE</licenseUrl>
+    <authors>José Valim</authors>
     <projectUrl>http://elixir-lang.org/</projectUrl>
-    <iconUrl>https://secure.gravatar.com/avatar/4c5c2c297ed9f4664cfbe7733a011fb2?s=400&amp;d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png</iconUrl>
+    <iconUrl>http://cdn.rawgit.com/brunoyb/chocolatey-packages/c731c7668505b648b1c570f050104040b7fa3ddd/icons/elixir.png</iconUrl>
+    <copyright>Plataformatec</copyright>
+    <licenseUrl>https://github.com/elixir-lang/elixir/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Elixir is a functional meta-programming aware language built on top of the Erlang VM. It is a dynamic language with flexible syntax with macros support that leverages Erlang's abilities to build concurrent, distributed, fault-tolerant applications with hot code upgrades.
+    <projectSourceUrl>https://github.com/elixir-lang/elixir</projectSourceUrl>
+    <docsUrl>http://elixir-lang.org/docs.html</docsUrl>
+    <mailingListUrl>https://groups.google.com/group/elixir-lang-talk</mailingListUrl>
+    <bugTrackerUrl>https://github.com/elixir-lang/elixir/issues</bugTrackerUrl>
+    <tags>elixir erlang ruby concurrent functional programming language admin</tags>
+    <summary>Elixir is a functional meta-programming aware language built on top of the Erlang VM</summary>
+    <description>
+Elixir is a functional meta-programming aware language built on top of the Erlang VM. It is a dynamic language with flexible syntax with macros support that leverages Erlang's abilities to build concurrent, distributed, fault-tolerant applications with hot code upgrades.
 
 Elixir also provides first-class support for pattern matching, polymorphism via protocols (similar to Clojure's), aliases and associative data structures (usually known as dicts or hashes in other programming languages).
 
-Finally, Elixir and Erlang share the same bytecode and data types. This means you can invoke Erlang code from Elixir (and vice-versa) without any conversion or performance hit. This allows a developer to mix the expressiveness of Elixir with the robustness and performance of Erlang.</description>
-    <summary>Elixir is a functional meta-programming aware language built on top of the Erlang VM.</summary>
-    <releaseNotes>https://github.com/elixir-lang/elixir/releases/</releaseNotes>
-    <tags>erlang concurrent programming language sdk otp elixir ruby</tags>
-    <projectSourceUrl>https://github.com/elixir-lang/elixir</projectSourceUrl>
-    <packageSourceUrl>https://github.com/ElixirWin/ChocolateyPackages</packageSourceUrl>
-    <docsUrl>http://elixir-lang.org/docs.html</docsUrl>
-    <mailingListUrl>https://groups.google.com/forum/?hl=en#!forum/elixir-lang-talk</mailingListUrl>
-    <bugTrackerUrl>https://github.com/elixir-lang/elixir/issues</bugTrackerUrl>
+Finally, Elixir and Erlang share the same bytecode and data types. This means you can invoke Erlang code from Elixir (and vice-versa) without any conversion or performance hit. This allows a developer to mix the expressiveness of Elixir with the robustness and performance of Erlang.
+    </description>
+    <releaseNotes>https://github.com/elixir-lang/elixir/releases</releaseNotes>
     <dependencies>
       <dependency id="erlang" version="18.0.20150709.2" />
     </dependencies>
   </metadata>
+  <files>
+    <file src="tools\**" target="tools" />
+  </files>
 </package>
