--- a/packages/mirc/mirc.nuspec
+++ b/packages/mirc/mirc.nuspec
@@ -1,23 +1,29 @@
-<?xml version="1.0"?>
-<package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
+<?xml version="1.0" encoding="utf-8"?>
+<package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>mirc</id>
-    <version>7.34</version>
-    <title>mIRC: Internet Relay Chat client</title>
+    <version>7.45</version>
+    <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages</packageSourceUrl>
+    <owners>Bruno Baldochi</owners>
+    <title>mIRC</title>
     <authors>Khaled Mardam-Bey</authors>
-    <owners>pjmagee</owners>
-    <licenseUrl>http://www.mirc.co.uk/register.html</licenseUrl>
     <projectUrl>http://www.mirc.com/</projectUrl>
-    <iconUrl>http://www.mirc.co.uk/images/getlogo.gif</iconUrl>
+    <iconUrl>http://cdn.rawgit.com/brunoyb/chocolatey-packages/51d74e14082367c2aa3744335a980c6550fb3674/icons/mirc.gif</iconUrl>
+    <copyright>mIRC Co. Ltd.</copyright>
+    <licenseUrl>http://www.mirc.com/eula.html</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>mIRC is a full featured Internet Relay Chat client for Windows that can be used to communicate, share, play or work with others on IRC networks around the world, either in multi-user group conferences or in one-to-one private discussions.
+    <tags>mirc irc instant messaging im chat admin</tags>
+    <summary>mIRC is a popular Internet Relay Chat client used by millions of people, and thousands of organizations, to communicate, share, play and work with each other on IRC networks around the world</summary>
+    <description>
+mIRC is a full featured Internet Relay Chat client for Windows that can be used to communicate, share, play or work with others on IRC networks around the world, either in multi-user group conferences or in one-to-one private discussions.
 
-      It has a clean, practical interface that is highly configurable and supports features such as buddy lists, file transfers, multi-server connections, IPv6, SSL encryption, proxy support, UTF-8 display, UPnP, customizable sounds, spoken messages, tray notifications, message logging, and more.
+It has a clean, practical interface that is highly configurable and supports features such as buddy lists, file transfers, multi-server connections, IPv6, SSL encryption, proxy support, UTF-8 display, UPnP, customizable sounds, spoken messages, tray notifications, message logging, and more.
 
-      mIRC also has a powerful scripting language that can be used both to automate mIRC and to create applications that perform a wide range of functions from network communications to playing games.</description>
-    <summary>mIRC is a popular Internet Relay Chat client used by millions of people, and thousands of organizations, to communicate, share, play and work with each other on IRC networks around the world.</summary>
-    <releaseNotes>http://www.mirc.co.uk/whatsnew.txt</releaseNotes>
-    <copyright>mIRC Co. Ltd</copyright>
-    <tags>mirc irc instant messaging collaboration chat IM</tags>
+mIRC also has a powerful scripting language that can be used both to automate mIRC and to create applications that perform a wide range of functions from network communications to playing games.
+    </description>
+    <releaseNotes>http://www.mirc.com/whatsnew.txt</releaseNotes>
   </metadata>
+  <files>
+    <file src="tools\**" target="tools" />
+  </files>
 </package>
