--- a/packages/mongochef/mongochef.nuspec
+++ b/packages/mongochef/mongochef.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>mongochef</id>
-    <version>4.1.1</version>
+    <version>4.2.0</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>MongoChef</title>
@@ -12,7 +12,7 @@
     <copyright>3T Software Labs GmbH</copyright>
     <licenseUrl>https://downloads.3t.io/eula/3t_ltd_eula.pdf</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <tags>mongochef mongodb mongo nosql database db trial admin</tags>
+    <tags>mongochef mongodb mongo nosql database db admin trial</tags>
     <summary>Professional MongoDB GUI for Windows, Mac, and Linux</summary>
     <description>
 MongoChef is the best tool to work with MongoDB. Whether you’re exploring your local database or working with shards and replica sets, MongoChef is here to help and make working with MongoDB a pleasure.
