--- a/packages/haskell-stack/haskell-stack.nuspec
+++ b/packages/haskell-stack/haskell-stack.nuspec
@@ -16,7 +16,7 @@
     <docsUrl>http://docs.haskellstack.org/en/stable/README/</docsUrl>
     <mailingListUrl>https://groups.google.com/d/forum/haskell-stack</mailingListUrl>
     <bugTrackerUrl>https://github.com/commercialhaskell/stack/issues</bugTrackerUrl>
-    <tags>haskell-stack haskell stack programming language ghc cabal</tags>
+    <tags>haskell-stack haskell stack programming language ghc cabal admin</tags>
     <summary>Stack is a cross-platform program for developing Haskell projects</summary>
     <description>
 Stack is a cross-platform build tool for Haskell that handles management of the toolchain (including the GHC compiler and MSYS2 on Windows), building and registering libraries, and more.
@@ -30,8 +30,21 @@ It features:
 * Benchmarking your project.
 
 The links provided with the package are related to The Haskell Tool Stack, if you're looking for help learning Haskell itself, start with the [Documentation](https://www.haskell.org/documentation).
+
+## Package parameters
+
+The following package parameters can be set:
+
+* `NoLocalBinOnPath` - this disables putting %APPDATA%\local\bin on Path. You usually want this if you configure your local-bin-path to other than the default.
+* `NoStackRoot` - this disables setting STACK_ROOT to %SystemDrive%\sr (e.g. C:\sr) to workaround issues with long paths. It is recommended that you leave this enabled.
+
+These parameters can be passed to the installer with the use of `-params`.
+For example: `-params '"/NoLocalBinOnPath /NoStackRoot"'`.
     </description>
     <releaseNotes>http://docs.haskellstack.org/en/stable/ChangeLog/</releaseNotes>
+    <dependencies>
+      <dependency id="chocolatey-core.extension" version="1.0.4" />
+    </dependencies>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
