--- a/studio3t/studio3t.nuspec
+++ b/studio3t/studio3t.nuspec
@@ -4,7 +4,7 @@
   <metadata>
     <!-- Read this before publishing packages to chocolatey.org: https://github.com/chocolatey/chocolatey/wiki/CreatePackages -->
     <id>studio3t</id>
-    <version>5.3.0</version>
+    <version>5.3.0.20170527</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>Studio 3T</title>
