--- a/_personal/ag/ag.nuspec
+++ b/_personal/ag/ag.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Read this before creating packages: https://chocolatey.org/docs/create-packages -->
 <!-- Do not remove this test for UTF-8: if “Ω” doesn’t appear as greek uppercase omega letter enclosed in quotation marks, you should use an editor that supports UTF-8, not this one. -->
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
-    <!-- Read this before publishing packages to chocolatey.org: https://github.com/chocolatey/chocolatey/wiki/CreatePackages -->
     <id>ag</id>
     <version>1.0.2</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages</packageSourceUrl>
@@ -28,7 +28,7 @@ A code searching tool similar to `ack`, with a focus on speed.
 * If there are files in your source repo you don't want to search, just add their patterns to a `.ignore` file. (\*cough\* `*.min.js` \*cough\*)
 * The command name is 33% shorter than `ack`, and all keys are on the home row!
     </description>
-    <releaseNotes>https://github.com/JFLarvoire/the_silver_searcher/releases</releaseNotes>
+    <releaseNotes>https://github.com/JFLarvoire/the_silver_searcher/releases/tag/1.0.2-Windows</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
