mongochef: Fix copyright
I know, deprecated. But I changed on studio3t, so I updated here also.
Anyway, I want to remove this soon, maybe in a few months.

--- a/_deprecated/mongochef/mongochef.nuspec
+++ b/_deprecated/mongochef/mongochef.nuspec
@@ -10,7 +10,7 @@
     <title>[Deprecated] MongoChef</title>
     <authors>3T</authors>
     <projectUrl>http://3t.io/mongochef/</projectUrl>
-    <copyright>3T Software Labs GmbH</copyright>
+    <copyright>3T Software Labs</copyright>
     <licenseUrl>https://downloads.3t.io/eula/3t_ltd_eula.pdf</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <tags>mongochef mongodb mongo nosql database db admin trial</tags>
