ag: Fix copyright

--- a/_personal/ag/ag.nuspec
+++ b/_personal/ag/ag.nuspec
@@ -10,7 +10,7 @@
     <title>The Silver Searcher</title>
     <authors>Geoff Greer</authors>
     <projectUrl>https://github.com/JFLarvoire/the_silver_searcher</projectUrl>
-    <copyright>The Silver Searcher</copyright>
+    <copyright>Geoff Greer</copyright>
     <licenseUrl>https://github.com/JFLarvoire/the_silver_searcher/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectSourceUrl>https://github.com/JFLarvoire/the_silver_searcher</projectSourceUrl>
