--- a/_personal/ag/ag.nuspec
+++ b/_personal/ag/ag.nuspec
@@ -4,18 +4,18 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>ag</id>
-    <version>1.0.2</version>
+    <version>2.1.0.1</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>The Silver Searcher</title>
     <authors>Geoff Greer</authors>
-    <projectUrl>https://github.com/JFLarvoire/the_silver_searcher</projectUrl>
+    <projectUrl>https://github.com/k-takata/the_silver_searcher-win32</projectUrl>
     <copyright>Geoff Greer</copyright>
-    <licenseUrl>https://github.com/JFLarvoire/the_silver_searcher/blob/master/LICENSE</licenseUrl>
+    <licenseUrl>https://github.com/k-takata/the_silver_searcher-win32/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <projectSourceUrl>https://github.com/JFLarvoire/the_silver_searcher</projectSourceUrl>
-    <docsUrl>https://github.com/JFLarvoire/the_silver_searcher/blob/master/README.md</docsUrl>
-    <bugTrackerUrl>https://github.com/JFLarvoire/the_silver_searcher/issues</bugTrackerUrl>
+    <projectSourceUrl>https://github.com/k-takata/the_silver_searcher-win32</projectSourceUrl>
+    <docsUrl>https://github.com/k-takata/the_silver_searcher-win32/blob/master/README.md</docsUrl>
+    <bugTrackerUrl>https://github.com/k-takata/the_silver_searcher-win32/issues</bugTrackerUrl>
     <tags>ag ack grep search</tags>
     <summary>A code searching tool similar to ack, with a focus on speed</summary>
     <description>
@@ -28,7 +28,7 @@ A code searching tool similar to `ack`, with a focus on speed.
 * If there are files in your source repo you don't want to search, just add their patterns to a `.ignore` file. (\*cough\* `*.min.js` \*cough\*)
 * The command name is 33% shorter than `ack`, and all keys are on the home row!
     </description>
-    <releaseNotes>https://github.com/JFLarvoire/the_silver_searcher/releases/tag/1.0.2-Windows</releaseNotes>
+    <releaseNotes>https://github.com/k-takata/the_silver_searcher-win32/releases/tag/2017-08-31/2.1.0-1</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
