--- a/haskell-stack/haskell-stack.nuspec
+++ b/haskell-stack/haskell-stack.nuspec
@@ -10,7 +10,7 @@
     <title>Haskell Stack</title>
     <authors>Stack contributors</authors>
     <projectUrl>http://haskellstack.org/</projectUrl>
-    <iconUrl>http://cdn.rawgit.com/brunoyb/chocolatey-packages/ef3e7280d17af850e074ec9c47629076719b81dc/haskell-stack/icon.png</iconUrl>
+    <iconUrl>https://cdn.rawgit.com/brunoyb/chocolatey-packages/ef3e7280d17af850e074ec9c47629076719b81dc/haskell-stack/icon.png</iconUrl>
     <copyright>Stack contributors</copyright>
     <licenseUrl>https://github.com/commercialhaskell/stack/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -20,7 +20,7 @@
     <bugTrackerUrl>https://github.com/commercialhaskell/stack/issues</bugTrackerUrl>
     <tags>haskell-stack haskell stack functional programming language ghc cabal</tags>
     <summary>Stack is a cross-platform program for developing Haskell projects</summary>
-    <description>
+    <description><![CDATA[
 Stack is a cross-platform build tool for Haskell that handles management of the toolchain (including the GHC compiler and MSYS2 on Windows), building and registering libraries, and more.
 
 ## Features
@@ -42,7 +42,7 @@ The following package parameters can be set:
 
 These parameters can be passed to the installer with the use of `-params`.
 For example: `-params '"/NoLocalBinOnPath /NoStackRoot"'`.
-    </description>
+]]></description>
     <releaseNotes>http://docs.haskellstack.org/en/stable/ChangeLog/#151</releaseNotes>
     <dependencies>
       <dependency id="chocolatey-core.extension" version="1.0.4" />
