--- a/mirc/mirc.nuspec
+++ b/mirc/mirc.nuspec
@@ -10,19 +10,19 @@
     <title>mIRC</title>
     <authors>Khaled Mardam-Bey</authors>
     <projectUrl>http://www.mirc.com/</projectUrl>
-    <iconUrl>http://cdn.rawgit.com/brunoyb/chocolatey-packages/c2a636653b158d2cb375c1b2db7d4f19cdcb78ff/mirc/icon.png</iconUrl>
+    <iconUrl>https://cdn.rawgit.com/brunoyb/chocolatey-packages/c2a636653b158d2cb375c1b2db7d4f19cdcb78ff/mirc/icon.png</iconUrl>
     <copyright>mIRC Co. Ltd.</copyright>
     <licenseUrl>http://www.mirc.com/eula.html</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <tags>mirc irc instant messaging im chat admin</tags>
     <summary>mIRC is a popular Internet Relay Chat client used by millions of people, and thousands of organizations, to communicate, share, play and work with each other on IRC networks around the world</summary>
-    <description>
+    <description><![CDATA[
 mIRC is a full featured Internet Relay Chat client for Windows that can be used to communicate, share, play or work with others on IRC networks around the world, either in multi-user group conferences or in one-to-one private discussions.
 
 It has a clean, practical interface that is highly configurable and supports features such as buddy lists, file transfers, multi-server connections, IPv6, SSL encryption, proxy support, UTF-8 display, UPnP, customizable sounds, spoken messages, tray notifications, message logging, and more.
 
 mIRC also has a powerful scripting language that can be used both to automate mIRC and to create applications that perform a wide range of functions from network communications to playing games.
-    </description>
+]]></description>
     <releaseNotes>http://www.mirc.com/whatsnew.txt</releaseNotes>
     <dependencies>
       <dependency id="chocolatey-core.extension" version="1.0.5" />
