--- a/robo3t/robo3t.nuspec
+++ b/robo3t/robo3t.nuspec
@@ -10,7 +10,7 @@
     <title>Robo 3T</title>
     <authors>3T</authors>
     <projectUrl>https://robomongo.org/</projectUrl>
-    <iconUrl>http://cdn.rawgit.com/brunoyb/chocolatey-packages/d99e5a1f01b3612b5c66bef661af0fb19bb2bd0d/robo3t/icon.png</iconUrl>
+    <iconUrl>https://cdn.rawgit.com/brunoyb/chocolatey-packages/d99e5a1f01b3612b5c66bef661af0fb19bb2bd0d/robo3t/icon.png</iconUrl>
     <copyright>3T Software Labs</copyright>
     <licenseUrl>https://github.com/Studio3T/robomongo/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -18,7 +18,9 @@
     <bugTrackerUrl>https://github.com/Studio3T/robomongo/issues</bugTrackerUrl>
     <tags>robo3t robomongo mongodb mongo nosql database db</tags>
     <summary>MongoDB management tool</summary>
-    <description>Formerly known as Robomongo (more info on https://robomongo.org/), Robo 3T is a shell-centric cross-platform MongoDB management tool. Unlike most other MongoDB admin UI tools, Robo 3T embeds the actual `mongo` shell in a tabbed interface with access to a shell command line as well as GUI interaction.</description>
+    <description><![CDATA[
+Formerly known as Robomongo (more info on https://robomongo.org/), Robo 3T is a shell-centric cross-platform MongoDB management tool. Unlike most other MongoDB admin UI tools, Robo 3T embeds the actual `mongo` shell in a tabbed interface with access to a shell command line as well as GUI interaction.
+]]></description>
     <releaseNotes>https://github.com/Studio3T/robomongo/blob/master/CHANGELOG</releaseNotes>
     <dependencies>
       <dependency id="robo3t.install" version="1.1.1" />
