studio3t: Add README.md

--- a/studio3t/studio3t.nuspec
+++ b/studio3t/studio3t.nuspec
@@ -10,17 +10,17 @@
     <title>Studio 3T</title>
     <authors>3T</authors>
     <projectUrl>https://studio3t.com/</projectUrl>
-    <iconUrl>http://cdn.rawgit.com/brunoyb/chocolatey-packages/ef3e7280d17af850e074ec9c47629076719b81dc/studio3t/icon.png</iconUrl>
+    <iconUrl>https://cdn.rawgit.com/brunoyb/chocolatey-packages/ef3e7280d17af850e074ec9c47629076719b81dc/studio3t/icon.png</iconUrl>
     <copyright>3T Software Labs</copyright>
     <licenseUrl>http://files.studio3t.com/eula/eula.pdf</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <tags>studio3t mongochef mongodb mongo nosql database db admin trial</tags>
     <summary>The IDE for MongoDB</summary>
-    <description>
+    <description><![CDATA[
 Formerly known as MongoChef, Studio 3T helps thousands of MongoDB developers and administrators with their everyday jobs by providing the finest MongoDB tools on the market.
 
 Studio 3T is free for non-commercial use or you can freely evaluate it for commercial purposes for 14 days.
-    </description>
+]]></description>
     <releaseNotes>http://files.studio3t.com/changelog/changelog.txt</releaseNotes>
   </metadata>
   <files>
