--- a/_personal/ripgrep/ripgrep.nuspec
+++ b/_personal/ripgrep/ripgrep.nuspec
@@ -17,7 +17,9 @@
     <bugTrackerUrl>https://github.com/BurntSushi/ripgrep/issues</bugTrackerUrl>
     <tags>ripgrep rg ag pt ack grep search</tags>
     <summary>A line oriented search tool that combines the usability of The Silver Searcher with the raw speed of grep</summary>
-    <description>`ripgrep` is a line oriented search tool that combines the usability of The Silver Searcher (similar to `ack`) with the raw speed of GNU grep. `ripgrep` works by recursively searching your current directory for a regex pattern. `ripgrep` has first class support on Windows, Mac and Linux.</description>
+    <description><![CDATA[
+`ripgrep` is a line oriented search tool that combines the usability of The Silver Searcher (similar to `ack`) with the raw speed of GNU grep. `ripgrep` works by recursively searching your current directory for a regex pattern. `ripgrep` has first class support on Windows, Mac and Linux.
+]]></description>
     <releaseNotes>https://github.com/BurntSushi/ripgrep/releases/tag/0.7.1</releaseNotes>
     <dependencies>
       <dependency id="vcredist2015" />
