--- a/_personal/ag/ag.nuspec
+++ b/_personal/ag/ag.nuspec
@@ -4,7 +4,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>ag</id>
-    <version>2.1.0.1</version>
+    <version>2.1.0.5</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>The Silver Searcher</title>
@@ -18,7 +18,7 @@
     <bugTrackerUrl>https://github.com/k-takata/the_silver_searcher-win32/issues</bugTrackerUrl>
     <tags>ag ack grep search</tags>
     <summary>A code searching tool similar to ack, with a focus on speed</summary>
-    <description>
+    <description><![CDATA[
 A code searching tool similar to `ack`, with a focus on speed.
 
 ## Features
@@ -27,8 +27,8 @@ A code searching tool similar to `ack`, with a focus on speed.
 * It ignores file patterns from your `.gitignore` and `.hgignore`.
 * If there are files in your source repo you don't want to search, just add their patterns to a `.ignore` file. (\*cough\* `*.min.js` \*cough\*)
 * The command name is 33% shorter than `ack`, and all keys are on the home row!
-    </description>
-    <releaseNotes>https://github.com/k-takata/the_silver_searcher-win32/releases/tag/2017-08-31/2.1.0-1</releaseNotes>
+]]></description>
+    <releaseNotes>https://github.com/k-takata/the_silver_searcher-win32/releases/tag/2017-10-23/2.1.0-5-g1791664</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
