--- a/robo3t.portable/robo3t.portable.nuspec
+++ b/robo3t.portable/robo3t.portable.nuspec
@@ -5,7 +5,7 @@
   <metadata>
     <id>robo3t.portable</id>
     <version>1.1.1</version>
-    <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages</packageSourceUrl>
+    <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages/tree/master/robo3t.portable</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>Robo 3T (Portable)</title>
     <authors>3T</authors>
