truepng: Fix copyright

--- a/truepng/truepng.nuspec
+++ b/truepng/truepng.nuspec
@@ -10,7 +10,7 @@
     <title>TruePNG</title>
     <authors>x128</authors>
     <projectUrl>http://x128.ho.ua/pngutils.html</projectUrl>
-    <copyright>x128</copyright>
+    <copyright>x128 © 2009-2017</copyright>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <tags>truepng png optimizer web</tags>
     <summary>PNG Optimizer</summary>
