--- a/truepng/truepng.nuspec
+++ b/truepng/truepng.nuspec
@@ -17,7 +17,7 @@
     <description><![CDATA[
 TruePNG is one of the most advanced PNG optimizers available.
 
-[TruePNG tutorial](https://css-ig.net/articles/truepng.php) by Cédric Louvrier.
+[Tutorial](https://css-ig.net/articles/truepng.php) by Cédric Louvrier.
 ]]></description>
   </metadata>
   <files>
