--- a/haskell-stack/haskell-stack.nuspec
+++ b/haskell-stack/haskell-stack.nuspec
@@ -43,7 +43,7 @@ The following package parameters can be set:
 These parameters can be passed to the installer with the use of `-params`.
 For example: `-params '"/NoLocalBinOnPath /NoStackRoot"'`.
 ]]></description>
-    <releaseNotes>http://docs.haskellstack.org/en/stable/ChangeLog/#161</releaseNotes>
+    <releaseNotes>https://github.com/commercialhaskell/stack/releases/tag/v1.6.1</releaseNotes>
     <dependencies>
       <dependency id="chocolatey-core.extension" version="1.0.4" />
     </dependencies>
