--- a/_personal/ag/ag.nuspec
+++ b/_personal/ag/ag.nuspec
@@ -4,7 +4,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>ag</id>
-    <version>2.1.0.38</version>
+    <version>2.2.0.2</version>
     <packageSourceUrl>https://github.com/brunoyb/chocolatey-packages/tree/master/_personal/ag</packageSourceUrl>
     <owners>Bruno Baldochi</owners>
     <title>The Silver Searcher</title>
@@ -28,7 +28,7 @@ A code searching tool similar to `ack`, with a focus on speed.
 * If there are files in your source repo you don't want to search, just add their patterns to a `.ignore` file. (\*cough\* `*.min.js` \*cough\*)
 * The command name is 33% shorter than `ack`, and all keys are on the home row!
 ]]></description>
-    <releaseNotes>https://github.com/k-takata/the_silver_searcher-win32/releases/tag/2018-06-08/2.1.0-38-g9163065</releaseNotes>
+    <releaseNotes>https://github.com/k-takata/the_silver_searcher-win32/releases/tag/2018-08-08/2.2.0-2-gbd82cd3</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
