--- a/_personal/sbt/sbt.nuspec
+++ b/_personal/sbt/sbt.nuspec
@@ -11,17 +11,17 @@
     <authors>Lightbend, Inc.</authors>
     <projectUrl>https://www.scala-sbt.org/</projectUrl>
     <iconUrl>https://cdn.rawgit.com/brunoyb/chocolatey-packages/ab87c8540007ed240d940ef34da45b55653f667b/_personal/sbt/icon.svg</iconUrl>
-    <copyright>Lightbend, Inc.</copyright>
-    <licenseUrl>https://github.com/sbt/sbt/blob/1.x/LICENSE</licenseUrl>
+    <copyright>2011-2018 Lightbend, Inc.</copyright>
+    <licenseUrl>https://github.com/sbt/sbt/blob/develop/LICENSE</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectSourceUrl>https://github.com/sbt/sbt</projectSourceUrl>
-    <docsUrl>https://www.scala-sbt.org/1.x/docs/index.html</docsUrl>
+    <docsUrl>https://www.scala-sbt.org/documentation.html</docsUrl>
     <mailingListUrl>https://groups.google.com/d/forum/sbt-dev</mailingListUrl>
     <bugTrackerUrl>https://github.com/sbt/sbt/issues</bugTrackerUrl>
     <tags>sbt scala java functional programming language admin</tags>
     <summary>The interactive build tool</summary>
     <description><![CDATA[
-sbt is a build tool for Scala, Java, and more. It requires Java 1.8 or later.
+sbt is a build tool for Scala, Java, and more.
 ]]></description>
     <releaseNotes>https://github.com/sbt/sbt/releases/tag/v1.2.3</releaseNotes>
   </metadata>
