--- a/robo3t.portable/robo3t.portable.nuspec
+++ b/robo3t.portable/robo3t.portable.nuspec
@@ -21,7 +21,7 @@
     <description><![CDATA[
 Formerly known as Robomongo (more info on https://robomongo.org/), Robo 3T is a shell-centric cross-platform MongoDB management tool. Unlike most other MongoDB admin UI tools, Robo 3T embeds the actual `mongo` shell in a tabbed interface with access to a shell command line as well as GUI interaction.
 ]]></description>
-    <releaseNotes>https://github.com/Studio3T/robomongo/blob/master/CHANGELOG</releaseNotes>
+    <releaseNotes>https://github.com/Studio3T/robomongo/releases/tag/v1.3.1</releaseNotes>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
